--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 			<!-- CSS -->
-			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 			<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather">
-			<link rel="stylesheet" href="public/pocheLib.css">
+			<link rel="stylesheet" href="public/design.css">
 	</head>
   	<body>
 		<div id="myBooks">
